punto 2: conteinerizacion - Dockerfiles por servicio, .dockerignore, compose con red app-net, tags versionadas y sin credenciales

--- a/.env
+++ b/.env
@@ -1,27 +1,18 @@
-# ==== RED DOCKER ====
+# Tags
+IMAGE_TAG=1.0.0
+
+# Red Docker
 DOCKER_NETWORK=app-net
 
-# ==== PUERTOS EXTERNOS ====
+# Puertos externos
 GATEWAY_PORT=8080
-API_PORT=8081
-FRONTEND_PORT=8082
 PROMETHEUS_PORT=9090
 
-# ==== MYSQL ====
+# MySQL
 MYSQL_DB=appdb
 MYSQL_USER=app
 MYSQL_PASSWORD=secret
 MYSQL_ROOT_PASSWORD=rootpass
-MYSQL_HOST=mysql
-MYSQL_PORT=3306
 
-# ==== API ====
+# API
 SERVER_PORT=8081
-
-# ==== RUTAS INTERNAS ENTRE SERVICIOS (nombre de servicio en red Docker/K8s) ====
-API_BASE=http://api:8081
-GATEWAY_BASE=http://gateway:8080
-PROMETHEUS_SCRAPE_PATH=/actuator/prometheus
-
-# ==== K8S ====
-K8S_NAMESPACE=demo
